# pyvmomi-tools

./: .gitignore  README.md  pyproject.toml  pyvmomi_tools.py
examples/: clone_retrieve_delete.py  mks_ticket.py
pyvmomi_tools/: __init__.py  pchelper.py
