[tool.poetry]
name = "pyvmomi-tools"
version = "0.1.2"
description = ""
authors = ["Blake <80996688+BlakeTnr@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyvmomi = "^8.0.2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
